# spdlog_setup

./: .gitignore  CMakeLists.txt  codecov.yml
cmake/: spdlog_setup-config.cmake.in  spdlog_setup-cpack.cmake
include/spdlog_setup/: conf.h
include/spdlog_setup/details/: conf_impl.h  setup_error.h  template_impl.h
src/unit_test/: examples.h  loggers.cpp  loggers.h  others.cpp  sinks.cpp  sinks.h  thread_pool.cpp  thread_pool.h
vcpkg/ports/spdlog-setup/: portfile.cmake  usage  vcpkg.json
